--- a/package.json
+++ b/package.json
@@ -9,19 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-hook/window-size": "^3.1.1",
+    "framer-motion": "^11.0.8",
+    "@types/normalize-wheel": "1.0.1",
+    "next": "14.1.2",
+    "normalize-wheel": "^1.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.2"
+    "react-use": "^17.5.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.2",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.2"
+    "typescript": "^5"
   }
 }
